# fast-api-study

./: README.md
secao02/: main.py  pyproject.toml  requirements.txt
secao03/: main.py  models.py  pyproject.toml  requirements.txt
secao03_p1/: main.py  models.py  pyproject.toml
secao03_p2/: main.py
secao03_p2/routes/: curso_router.py  usuario_router.py
