[tool.poetry]
name = "secao03"
version = "0.1.0"
description = ""
authors = ["Victor Nascimento <augusto.van@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.88.0"

[tool.poetry.dev-dependencies]

gunicorn = "^20.1.0"
uvicorn = "^0.17.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
