[tool.poetry]
name = "secao03"
version = "0.1.0"
description = ""
authors = ["Victor Nascimento <augusto.van@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
path = "*"
pydantic = "^1.10.7"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
